k8s/pharma-dashboard/services-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: pharma-service
  namespace: pharma-transport
spec:
  selector:
    app: pharma-dashboard
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pharma-postgres
  namespace: pharma-transport
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pharma-postgres
  template:
    metadata:
      labels:
        app: pharma-postgres
    spec:
      containers:
      - name: postgres
        image: postgres:16
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: pharma-db-rw
  namespace: pharma-transport
spec:
  selector:
    app: pharma-postgres
  ports:
  - port: 5432
    targetPort: 5432
