k8s/pharma-dashboard/ingress-hpa.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pharma-ingress
  namespace: pharma-transport
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: "pharma-cert"
    kubernetes.io/ingress.global-static-ip-name: "pharma-ip"
spec:
  rules:
  - host: pharmatransport.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pharma-service
            port:
              number: 80
